fix #549 select value not visible due to padding-right: 40px on .select-value

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/style.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/style.css
@@ -3374,7 +3374,6 @@ input[type=tel].disabled-suggestions::-webkit-calendar-picker-indicator {
     position: absolute !important;
     top: 0px !important;
     left: 0 !important;
-    padding-right: 40px;
 }
 
 .select-label {
